force-app/main/default/objects/ucinn_ascendv2__Indicator_Badge__mdt/ucinn_ascendv2__Indicator_Badge__mdt.object-meta.xml
<CustomObject>
    <description>Allows quick, visual summaries based on field values for objects.</description>
    <label>Indicator Badge</label>
    <pluralLabel>Indicator Badges</pluralLabel>
</CustomObject>