force-app/main/default/objects/ucinn_ascendv2__Indicator_Badge__mdt/fields/ucinn_ascendv2__Badge_Color__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Badge_Color__c</fullName>
    <description>HTML Color name for badge background color. Color samples are shown here: http://www-db.deis.unibo.it/courses/TW/DOCS/w3schools/colors/colors_names.asp.html</description>
    <inlineHelpText>HTML Color name for badge background color. Color samples are shown here: http://www-db.deis.unibo.it/courses/TW/DOCS/w3schools/colors/colors_names.asp.html</inlineHelpText>
    <label>Badge Color</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AliceBlue</fullName>
                <default>true</default>
                <label>AliceBlue</label>
            </value>
            <value>
                <fullName>AntiqueWhite</fullName>
            </value>
            <value>
                <fullName>Aqua</fullName>
            </value>
            <value>
                <fullName>Aquamarine</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>Beige</fullName>
            </value>
            <value>
                <fullName>Bisque</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>BlanchedAlmond</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>BlueViolet</fullName>
            </value>
            <value>
                <fullName>Brown</fullName>
            </value>
            <value>
                <fullName>BurlyWood</fullName>
            </value>
            <value>
                <fullName>CadetBlue</fullName>
            </value>
            <value>
                <fullName>Chartreuse</fullName>
            </value>
            <value>
                <fullName>Chocolate</fullName>
            </value>
            <value>
                <fullName>Coral</fullName>
            </value>
            <value>
                <fullName>CornflowerBlue</fullName>
            </value>
            <value>
                <fullName>Cornsilk</fullName>
            </value>
            <value>
                <fullName>Crimson</fullName>
            </value>
            <value>
                <fullName>Cyan</fullName>
            </value>
            <value>
                <fullName>DarkBlue</fullName>
            </value>
            <value>
                <fullName>DarkCyan</fullName>
            </value>
            <value>
                <fullName>DarkGoldenRod</fullName>
            </value>
            <value>
                <fullName>DarkGray</fullName>
            </value>
            <value>
                <fullName>DarkGreen</fullName>
            </value>
            <value>
                <fullName>DarkGrey</fullName>
            </value>
            <value>
                <fullName>DarkKhaki</fullName>
            </value>
            <value>
                <fullName>DarkMagenta</fullName>
            </value>
            <value>
                <fullName>DarkOliveGreen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>