force-app/main/default/objects/ucinn_ascendv2__Indicator_Badge__mdt/fields/ucinn_ascendv2__Badge_Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Badge_Icon_Name__c</fullName>
    <defaultValue>&apos;standard:announcement&apos;</defaultValue>
    <description>Salesforce Lightning Design System (SLDS) name of icon to display. Should follow &lt;lightning:icon /&gt; naming convention (ex: standard:user, action:freeze_user). Icons are located here: https://www.lightningdesignsystem.com/icons/</description>
    <inlineHelpText>Salesforce Lightning Design System (SLDS) name of icon to display. Should follow &lt;lightning:icon /&gt; naming convention (ex: standard:user, action:freeze_user). Icons are located here: https://www.lightningdesignsystem.com/icons/</inlineHelpText>
    <label>Badge Icon Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>