force-app/main/default/objects/ucinn_ascendv2__Indicator_Badge__mdt/fields/ucinn_ascendv2__Comparison_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Comparison_Type__c</fullName>
    <description>Decides the logic to be used when evaluating whether or not a badge should be displayed on a record. For more information about comparison types, see Formula Operators and Functions: &apos;Logical Operators&apos; documentation.</description>
    <inlineHelpText>Decides the logic to be used when evaluating whether or not a badge should be displayed on a record. For more information about comparison types, see Formula Operators and Functions: &apos;Logical Operators&apos; documentation.</inlineHelpText>
    <label>Comparison Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contains</fullName>
                <default>true</default>
                <label>Contains</label>
            </value>
            <value>
                <fullName>Greater or Equal</fullName>
            </value>
            <value>
                <fullName>Less or Equal</fullName>
            </value>
            <value>
                <fullName>Blank or Null</fullName>
            </value>
            <value>
                <fullName>Not Blank or Null</fullName>
            </value>
            <value>
                <fullName>Use Boolean Value of Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>