force-app/main/default/objects/ucinn_ascendv2__Indicator_Badge__mdt/fields/ucinn_ascendv2__Comparison_Value__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Comparison_Value__c</fullName>
    <description>Leave blank for &apos;Blank or Null&apos; and &apos;Not Blank or Null&apos;.</description>
    <inlineHelpText>Leave blank for &apos;Blank or Null&apos; and &apos;Not Blank or Null&apos;.</inlineHelpText>
    <label>Comparison Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>